@@ -37,7 +37,7 @@ Pipes STDOUT to a pager if STDOUT is a TTY
 =head1 DESCRIPTION
 
 IO::Pager was designed to programmatically decide whether or not to point
-the STDOUT file handle into a pipe to program specified in the $PAGER
+the STDOUT file handle into a pipe to program specified in the I<PAGER>
 environment variable or one of a standard list of pagers.
 
 =head1 USAGE
